--- a/index.html
+++ b/index.html
@@ -466,7 +466,30 @@ CREATIVO , RESPONSABLE, TRABAJO EN EQUIPO PUNTUAL </p>
 						</div>
 					</div>
 				</div>
-
+   <div class="col-md-4 col-sm-6 gallery-grid gal_c">
+					<div class="gallery-single fix">
+						<img src="uploads/25.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/25.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+					</div>
+				</div>
+				   <div class="col-md-4 col-sm-6 gallery-grid gal_c">
+					<div class="gallery-single fix">
+						<img src="uploads/26.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/26.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+					</div>
+				</div>
+				   <div class="col-md-4 col-sm-6 gallery-grid gal_c">
+					<div class="gallery-single fix">
+						<img src="uploads/27.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="uploads/27.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 
 
